@@ -1,3 +1,7 @@
+2007-02-13  Sven Neumann  <sven@gimp.org>
+
+	* modules/gimpinputdevicestore.c: keep devices sorted alphabetically.
+
 2007-02-13  Michael Natterer  <mitch@gimp.org>
 
 	* modules/gimpinputdevicestore.[ch]: made dynamically loadable
